Added sayBye function

--- a/page.html
+++ b/page.html
@@ -13,6 +13,9 @@
       function sayGoodbye(){
         document.getElementById("goodbye").innerHTML = "See ya!";
       }
+      function sayBye(){
+        document.getElementById("goodbye").innerHTML = "Later skater"
+      }
     </script>
   </head>
   <body>
@@ -20,7 +23,7 @@
       <button type="button" class="btn btn-default" onclick="sayHello();">
         Sign in
       </button>
-      <button type="button" class="btn btn-default">
+      <button type="button" class="btn btn-default" onclick="sayBye();">
         Sign out
       </button>
       <div class="alert alert-success" role="alert" id="hello">
